--- a/index.html
+++ b/index.html
@@ -349,10 +349,13 @@
       
     </center>
     <center>
-      <font color=red size=6><b>Advertisement</b><br>
+      <font color=red size=6><strong>Advertisement</strong><br>
   </font>
-<div style="height: 0; padding-bottom: calc(56.25%); position:relative; width: 100%;"><iframe allow="autoplay; gyroscope;" allowfullscreen height="100%" referrerpolicy="strict-origin" src="https://www.kapwing.com/e/6519a0c88c7612ecf94274f2?autoplay=true" style="border:0; height:100%; left:0; overflow:hidden; position:absolute; top:0; width:100%" title="Embedded content made on Kapwing" width="70%"></iframe></div><p style="font-size: 12px; text-align: right;"> </p>
-</center>
+	    <iframe
+  src="https://mojapp.in/embed/3341380338"
+  width="400" height="400" frameborder="0">
+</iframe>
+    </center>
       <center><b>Ad's</b><br>
       <script type="text/javascript">
 	atOptions = {
