--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
       <div class="notice-board">
         <div class="notice">
             <h3>Important Update &nbsp;<img src="https://i.ibb.co/SV1bzrc/new-icon-gif-13.gif" width="15%"></h3>
-            <p><b>Welcome Back In SSY BRAND 🤩🤩<br>Download SSY BRAND Official Apps&nbsp;&nbsp;<a href="https://storage.googleapis.com/download/storage/v1/b/web-to-native-website-android-apps/o/QQ1Cy22gf9Djc1ENoxFN.apk?generation=1696925785417622&alt=media">Download App</a></b><br><center>Scan QR Code to download App&nbsp;&nbsp;<img src="https://i.ibb.co/XFqXq0r/Screenshot-20231010-140403-2-removebg-preview.png"width="60%"></center><br>Also check Notice board for more details:- &nbsp;<a href="https://satyam914.github.io/SSY-Notification-/">Notice Board</a><br></br><font color=blue>Thanks & regard <br>SSY BRAND</font></p>
+            <p><b>Welcome Back In SSY BRAND 🤩🤩<br>Download SSY GAMES Apps&nbsp;&nbsp;<a href="https://drive.google.com/file/d/1FXaB1tAHDh4M7VCl5VRaUwVHbjqdsLUi/view?usp=drivesdk ">Download Our Fist Game App</a></b><br><center>Scan QR Code to download App&nbsp;&nbsp;<img src="https://i.ibb.co/XFqXq0r/Screenshot-20231010-140403-2-removebg-preview.png"width="60%"></center><br>Also check Notice board for more details:- &nbsp;<a href="https://satyam914.github.io/SSY-Notification-/">Notice Board</a><br></br><font color=blue>Thanks & regard <br>SSY BRAND</font></p>
         </div>
       
     </center>
